--- a/style.css
+++ b/style.css
@@ -19,3 +19,14 @@
 /* Eudes */
 
 /* Priyanka */
+
+/*Harun*/
+.containerHarun {
+    background-color: aliceblue;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: helvetica;
+}
